src/libadalang/src/libadalang.h


typedef struct
{
   uint64_t serial_number;
} *ada_analysis_context;
typedef struct {
    ada_source_location start;
    ada_source_location end;
} ada_source_location_range;
typedef struct {
    uint32_t *chars;
    size_t length;
    int is_allocated;
} ada_text;
typedef void *ada_big_integer;
typedef enum {
      ADA_TERMINATION = 0
      ,
      ADA_LEXING_FAILURE = 1
      ,
      ADA_IDENTIFIER = 2
      ,
      ADA_ALL = 3
      ,
      ADA_ABORT = 4
      ,
      ADA_ELSE = 5
      ,
      ADA_NEW = 6
      ,
      ADA_RETURN = 7
      ,
      ADA_ABS = 8
      ,
      ADA_ELSIF = 9
      ,
      ADA_NOT = 10
      ,
      ADA_REVERSE = 11
      ,
      ADA_END = 12
      ,
      ADA_NULL = 13
      ,
      ADA_ACCEPT = 14
      ,
      ADA_ENTRY = 15
      ,
      ADA_SELECT = 16
      ,
      ADA_ACCESS = 17
      ,
      ADA_EXCEPTION = 18
      ,
      ADA_OF = 19
      ,
      ADA_SEPARATE = 20
      ,
      ADA_EXIT = 21
      ,
      ADA_OR = 22
      ,
      ADA_OTHERS = 23
      ,
      ADA_SUBTYPE = 24
      ,
      ADA_AND = 25
      ,
      ADA_FOR = 26
      ,
      ADA_OUT = 27
      ,
      ADA_ARRAY = 28
      ,
      ADA_FUNCTION = 29
      ,
      ADA_AT = 30
      ,
      ADA_GENERIC = 31
      ,
      ADA_PACKAGE = 32
      ,
      ADA_TASK = 33
      ,
      ADA_BEGIN = 34
      ,
      ADA_GOTO = 35
      ,
      ADA_PRAGMA = 36
      ,
      ADA_TERMINATE = 37
      ,
      ADA_BODY = 38
      ,
      ADA_PRIVATE = 39
      ,
      ADA_THEN = 40
      ,
      ADA_IF = 41
      ,
      ADA_PROCEDURE = 42
      ,
      ADA_TYPE = 43
      ,
      ADA_CASE = 44
      ,
      ADA_IN = 45
      ,
      ADA_CONSTANT = 46
      ,
      ADA_IS = 47
      ,
      ADA_RAISE = 48
      ,
      ADA_USE = 49
      ,
      ADA_DECLARE = 50
      ,
      ADA_RANGE = 51
      ,
      ADA_DELAY = 52
      ,
      ADA_LIMITED = 53
      ,
      ADA_RECORD = 54
      ,
      ADA_WHEN = 55
      ,
      ADA_DELTA = 56
      ,
      ADA_LOOP = 57
      ,
      ADA_REM = 58
      ,
      ADA_WHILE = 59
      ,
      ADA_DIGITS = 60
      ,
      ADA_RENAMES = 61
      ,
      ADA_DO = 62
      ,
      ADA_MOD = 63
      ,
      ADA_XOR = 64
      ,
      ADA_PAR_CLOSE = 65
      ,
      ADA_PAR_OPEN = 66
      ,
      ADA_BRACK_CLOSE = 67
      ,
      ADA_BRACK_OPEN = 68
      ,
      ADA_SEMICOLON = 69
      ,
      ADA_COLON = 70
      ,
      ADA_COMMA = 71
      ,
      ADA_DOUBLEDOT = 72
      ,
      ADA_DOT = 73
      ,
      ADA_DIAMOND = 74
      ,
      ADA_LTE = 75
      ,
      ADA_GTE = 76
      ,
      ADA_ARROW = 77
      ,
      ADA_EQUAL = 78
      ,
      ADA_LT = 79
      ,
      ADA_GT = 80
      ,
      ADA_PLUS = 81
      ,
      ADA_MINUS = 82
      ,
      ADA_POWER = 83
      ,
      ADA_MULT = 84
      ,
      ADA_AMP = 85
      ,
      ADA_NOTEQUAL = 86
      ,
      ADA_DIVIDE = 87
      ,
      ADA_TICK = 88
      ,
      ADA_PIPE = 89
      ,
      ADA_ASSIGN = 90
      ,
      ADA_LABEL_START = 91
      ,
      ADA_LABEL_END = 92
      ,
      ADA_TARGET = 93
      ,
      ADA_STRING = 94
      ,
      ADA_CHAR = 95
      ,
      ADA_WITH = 96
      ,
      ADA_DECIMAL = 97
      ,
      ADA_INTEGER = 98
      ,
      ADA_COMMENT = 99
      ,
      ADA_PREP_LINE = 100
      ,
      ADA_WHITESPACE = 101
} ada_token_kind;
typedef struct
{
   uint64_t version;
} *ada_token_data_handler;
typedef struct {
    ada_analysis_context context;
    ada_token_data_handler token_data;
    int token_index, trivia_index;
    ada_token_kind kind;
    ada_text text;
    ada_source_location_range sloc_range;
} ada_token;
   typedef enum {
      ADA_REF_RESULT_KIND_NO_REF, ADA_REF_RESULT_KIND_PRECISE, ADA_REF_RESULT_KIND_IMPRECISE, ADA_REF_RESULT_KIND_ERROR
   } ada_ref_result_kind;
typedef struct {
   ada_exception_kind kind;
   const char *information;
} ada_exception;
typedef struct ada_discriminant_values_array_record *ada_discriminant_values_array;
typedef struct ada_doc_annotation_array_record *ada_doc_annotation_array;
typedef struct ada_ada_node_array_record *ada_ada_node_array;
typedef struct ada_param_actual_array_record *ada_param_actual_array;
typedef struct ada_ref_result_array_record *ada_ref_result_array;
typedef struct ada_shape_array_record *ada_shape_array;
typedef struct ada_substitution_array_record *ada_substitution_array;
typedef struct ada_analysis_unit_array_record *ada_analysis_unit_array;
typedef struct ada_unbounded_text_type_array_record *ada_unbounded_text_type_array;
typedef void* ada_completion_item_iterator;
typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
typedef struct {
        ada_base_entity param;
        ada_base_entity actual;
} ada_internal_param_actual;
typedef struct {
        ada_base_entity ref;
        ada_ref_result_kind kind;
} ada_internal_ref_result;
typedef struct {
        ada_base_entity decl;
        ada_ref_result_kind kind;
} ada_internal_refd_decl;
typedef struct {
        ada_base_entity def_name;
        ada_ref_result_kind kind;
} ada_internal_refd_def;
typedef struct {
        ada_ada_node_array components;
        ada_discriminant_values_array discriminants_values;
} ada_internal_shape;
    extern void
    ada_internal_shape_inc_ref(ada_internal_shape *r);
    extern void
    ada_internal_shape_dec_ref(ada_internal_shape *r);
typedef struct {
        ada_base_entity from_decl;
        ada_big_integer to_value;
        ada_base_entity value_type;
} ada_internal_substitution;
    extern void
    ada_internal_substitution_inc_ref(ada_internal_substitution *r);
    extern void
    ada_internal_substitution_dec_ref(ada_internal_substitution *r);
struct ada_discriminant_values_array_record {
   int n;
   int ref_count;
   ada_internal_discriminant_values items[1];
};
extern ada_discriminant_values_array
ada_discriminant_values_array_create(int length);
extern void
ada_discriminant_values_array_inc_ref(ada_discriminant_values_array a);
extern void
ada_discriminant_values_array_dec_ref(ada_discriminant_values_array a);
struct ada_doc_annotation_array_record {
   int n;
   int ref_count;
   ada_internal_doc_annotation items[1];
};
extern ada_doc_annotation_array
ada_doc_annotation_array_create(int length);
extern void
ada_doc_annotation_array_inc_ref(ada_doc_annotation_array a);
extern void
ada_doc_annotation_array_dec_ref(ada_doc_annotation_array a);
struct ada_ada_node_array_record {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
extern ada_ada_node_array
ada_ada_node_array_create(int length);
extern void
ada_ada_node_array_inc_ref(ada_ada_node_array a);
extern void
ada_ada_node_array_dec_ref(ada_ada_node_array a);
struct ada_param_actual_array_record {
   int n;
   int ref_count;
   ada_internal_param_actual items[1];
};
extern ada_param_actual_array
ada_param_actual_array_create(int length);
extern void
ada_param_actual_array_inc_ref(ada_param_actual_array a);
extern void
ada_param_actual_array_dec_ref(ada_param_actual_array a);
struct ada_ref_result_array_record {
   int n;
   int ref_count;
   ada_internal_ref_result items[1];
};
extern ada_ref_result_array
ada_ref_result_array_create(int length);
extern void
ada_ref_result_array_inc_ref(ada_ref_result_array a);
extern void
ada_ref_result_array_dec_ref(ada_ref_result_array a);
struct ada_shape_array_record {
   int n;
   int ref_count;
   ada_internal_shape items[1];
};
extern ada_shape_array
ada_shape_array_create(int length);
extern void
ada_shape_array_inc_ref(ada_shape_array a);
extern void
ada_shape_array_dec_ref(ada_shape_array a);
struct ada_substitution_array_record {
   int n;
   int ref_count;
   ada_internal_substitution items[1];
};
extern ada_substitution_array
ada_substitution_array_create(int length);
extern void
ada_substitution_array_inc_ref(ada_substitution_array a);
extern void
ada_substitution_array_dec_ref(ada_substitution_array a);
struct ada_analysis_unit_array_record {
   int n;
   int ref_count;
   ada_analysis_unit items[1];
};
extern ada_analysis_unit_array
ada_analysis_unit_array_create(int length);
extern void
ada_analysis_unit_array_inc_ref(ada_analysis_unit_array a);
extern void
ada_analysis_unit_array_dec_ref(ada_analysis_unit_array a);
struct ada_unbounded_text_type_array_record {
   int n;
   int ref_count;
   ada_symbol_type items[1];
};
extern ada_unbounded_text_type_array
ada_unbounded_text_type_array_create(int length);
extern void
ada_unbounded_text_type_array_inc_ref(ada_unbounded_text_type_array a);
extern void
ada_unbounded_text_type_array_dec_ref(ada_unbounded_text_type_array a);
extern const ada_exception *
ada_get_last_exception(void);
extern char *
ada_token_kind_name(ada_token_kind kind);
extern void
ada_token_next(ada_token *token,
                               ada_token *next_token);
extern void
ada_token_previous(ada_token *token,
                                   ada_token *previous_token);
extern int
ada_token_range_text(ada_token *first,
                                     ada_token *last,
                                     ada_text *result);